log4j2 1、依赖统一管理 子工程继承父工程 2、log4j2.xml文件移动到config模块 统一管理

--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,11 @@ business/business-student/target/
 commons/commons-core/target/
 commons/commons-data/target/
 commons/commons-web/target/
-config/src/
 
 .idea
 target
+logs
 *.iml
 out
-/logs/
 
 .gitignore
