异常日志处理 commons-web的异常日志处理，此模块并未引入日志依赖，但可以使用日志 原因：这个模块并不是直接运行，没有main方法，而是将里面的代码整合到了可以运行的stu-server模块运行

--- a/business/business-student/pom.xml
+++ b/business/business-student/pom.xml
@@ -15,4 +15,14 @@
 
     </dependencies>
 
+    <build>
+        <plugins>
+            <!--            一个打包插件 需要运行的子工程必须添加-->
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
