--- a/business/pom.xml
+++ b/business/pom.xml
@@ -32,6 +32,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-log4j2</artifactId>
+            <!--排除依赖操作 只有在父工程写子工程才会生效-->
             <exclusions>
                 <exclusion>
                     <artifactId>log4j-core</artifactId>
@@ -51,6 +52,12 @@
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-api</artifactId>
+        </dependency>
+
+<!--        支持log4j2异步输出日志-->
+        <dependency>
+            <groupId>com.lmax</groupId>
+            <artifactId>disruptor</artifactId>
         </dependency>
 
 
