多环境配置-快速配置不同环境需要的参数

--- a/business/business-student/src/main/resources/application.yml
+++ b/business/business-student/src/main/resources/application.yml
@@ -2,6 +2,7 @@ spring:
   application:
     name: stu-server
   profiles:
-    include:
+    active: dev
       #表示导入一个后缀为log的yml文件 application-log.yml
-      - log
+      #- log
+      #- datasource
