解决maven编译项目不包含自定义资源目录文件问题

--- a/config/pom.xml
+++ b/config/pom.xml
@@ -18,4 +18,23 @@
         </dependency>
     </dependencies>
 
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+            </resource>
+            <resource>
+                <directory>src/main/resources-default</directory>
+            </resource>
+            <resource>
+                <directory>src/main/resources-dev</directory>
+            </resource>
+            <resource>
+                <directory>src/main/resources-test</directory>
+            </resource>
+            <resource>
+                <directory>src/main/resources-prod</directory>
+            </resource>
+        </resources>
+    </build>
 </project>
