maven占位符实现多环境快速配置 在maven工具标签通过profiles快速选择选境配置

--- a/business/business-student/src/main/resources/application.yml
+++ b/business/business-student/src/main/resources/application.yml
@@ -2,7 +2,8 @@ spring:
   application:
     name: stu-server
   profiles:
-    active: dev
+    active:
+      - @runtime-profile@
       #表示导入一个后缀为log的yml文件 application-log.yml
       #- log
       #- datasource
