--- a/commons/pom.xml
+++ b/commons/pom.xml
@@ -15,6 +15,7 @@
         <module>commons-web</module>
         <module>commons-core</module>
         <module>commons-data</module>
+        <module>commons-mybatis</module>
     </modules>
 
 
