--- a/commons/commons-mybatis/pom.xml
+++ b/commons/commons-mybatis/pom.xml
@@ -3,30 +3,27 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>business</artifactId>
+        <artifactId>commons</artifactId>
         <groupId>com.qf</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>business-student</artifactId>
+    <artifactId>commons-mybatis</artifactId>
 
     <dependencies>
         <dependency>
-            <groupId>com.qf</groupId>
-            <artifactId>data-student</artifactId>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.github.verygoodwlk</groupId>
+            <artifactId>ken-page-boot-starter</artifactId>
         </dependency>
     </dependencies>
-
-    <build>
-
-        <plugins>
-            <!--一个打包插件 需要运行的子工程必须添加-->
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
 
 </project>
