--- a/data/data-student/pom.xml
+++ b/data/data-student/pom.xml
@@ -3,25 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>20220920education-pom</artifactId>
+        <artifactId>data</artifactId>
         <groupId>com.qf</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>data</artifactId>
-
-    <dependencies>
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-        </dependency>
-    </dependencies>
-
-    <packaging>pom</packaging>
-    <modules>
-        <module>data-student</module>
-    </modules>
+    <artifactId>data-student</artifactId>
 
 
 </project>
