mybatis-plus数据插入 BaseEntity统一配置实体类公共属性 mybatis注解使用:id增长类型(@TableId)

--- a/data/data-student/pom.xml
+++ b/data/data-student/pom.xml
@@ -11,5 +11,11 @@
 
     <artifactId>data-student</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-annotation</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
