--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,11 @@
                 <version>${mybatis-plus.version}</version>
             </dependency>
             <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus-annotation</artifactId>
+                <version>${mybatis-plus.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>io.github.verygoodwlk</groupId>
                 <artifactId>ken-page-boot-starter</artifactId>
                 <version>${ken-page.version}</version>
