mybatis的填充操作

--- a/commons/commons-data/pom.xml
+++ b/commons/commons-data/pom.xml
@@ -21,6 +21,11 @@
             <groupId>io.github.verygoodwlk</groupId>
             <artifactId>ken-page-mybatis-commons</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-annotation</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
