--- a/data/pom.xml
+++ b/data/pom.xml
@@ -16,6 +16,13 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+
+        <!--验证依赖-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>com.qf</groupId>
             <artifactId>commons-data</artifactId>
