SpringCloud - nacos、feign 1、整合nacos 引入依赖，配置注册中心地址... 2、修改stu-server结构 更符合实际开发 core和feign分离 需要调用此服务的直接依赖此服务的feign模块即可 3、测试feign使用

--- a/business/business-student/pom.xml
+++ b/business/business-student/pom.xml
@@ -10,24 +10,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>business-student</artifactId>
-
-    <dependencies>
-        <dependency>
-            <groupId>com.qf</groupId>
-            <artifactId>data-student</artifactId>
-        </dependency>
-
-    </dependencies>
-
-    <build>
-
-        <plugins>
-            <!--一个打包插件 需要运行的子工程必须添加-->
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
+    <packaging>pom</packaging>
+    <modules>
+        <module>business-student-core</module>
+        <module>business-student-feign</module>
+    </modules>
 
 </project>
