--- a/commons/commons-web/pom.xml
+++ b/commons/commons-web/pom.xml
@@ -41,6 +41,15 @@
             <artifactId>spring-cloud-starter-zipkin</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba.csp</groupId>
+            <artifactId>sentinel-datasource-nacos</artifactId>
+        </dependency>
+
 
         <!--        data里的R对象 只有具有控制器的模块需要使用 就是引用了web依赖的模块 所以R对象也放到这里和web一起被依赖-->
         <dependency>
