微服务之间互相调用 调用方发生异常时 @Transactional事务不起作用 依然能够插入数据成功

--- a/config/pom.xml
+++ b/config/pom.xml
@@ -19,7 +19,7 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <!--不会打包这个依赖 用于帮助编写 可以有提示-->
+            <!--不会打包这个依赖 用于帮助编写 可以有提示 编译时舍弃该依赖-->
             <scope>provided</scope>
         </dependency>
         <dependency>
