使用seata实现分布式事务 数据回滚

--- a/business/business-course/pom.xml
+++ b/business/business-course/pom.xml
@@ -16,6 +16,11 @@
             <groupId>com.qf</groupId>
             <artifactId>business-student-feign</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-seata</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
