--- a/business/business-student/business-student-core/pom.xml
+++ b/business/business-student/business-student-core/pom.xml
@@ -13,10 +13,14 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-seata</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>com.qf</groupId>
             <artifactId>data-student</artifactId>
         </dependency>
-
     </dependencies>
 
     <build>
