--- a/pom.xml
+++ b/pom.xml
@@ -120,14 +120,10 @@
             </dependency>
             <dependency>
                 <groupId>com.qf</groupId>
-                <artifactId>data-student</artifactId>
+                <artifactId>data-user</artifactId>
                 <version>${qf.version}</version>
             </dependency>
-            <dependency>
-                <groupId>com.qf</groupId>
-                <artifactId>business-student-feign</artifactId>
-                <version>${qf.version}</version>
-            </dependency>
+
             <dependency>
                 <groupId>io.github.verygoodwlk</groupId>
                 <artifactId>ken-page-mybatis-commons</artifactId>
