--- a/config/src/main/resources-default/application-datasource.yml
+++ b/config/src/main/resources-default/application-datasource.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/course?serverTimezone=GMT%2B8
+    url: jdbc:mysql://localhost:3306/educationdb?serverTimezone=GMT%2B8
     username: root
     password: 123456
     driver-class-name: com.mysql.cj.jdbc.Driver
