--- a/ability/pom.xml
+++ b/ability/pom.xml
@@ -13,6 +13,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>ability-gateway</module>
+        <module>ability-atuh</module>
     </modules>
 
     <properties>
