登录认证 添加BaseUser类 用于区分不同客户端登录后生成的对象(子类user) user-server查询用户 返回dto对象 dto对象包含user和权限信息 auth-server处理登录逻辑 判断登录结果 返回前端

--- a/business/business-user/business-user-feign/pom.xml
+++ b/business/business-user/business-user-feign/pom.xml
@@ -11,5 +11,16 @@
 
     <artifactId>business-user-feign</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.qf</groupId>
+            <artifactId>data-user</artifactId>
+        </dependency>
+    </dependencies>
+
 
 </project>
