--- a/ability/ability-atuh/pom.xml
+++ b/ability/ability-atuh/pom.xml
@@ -16,6 +16,11 @@
             <groupId>com.qf</groupId>
             <artifactId>commons-web</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.qf</groupId>
+            <artifactId>business-user-feign</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
