使用JWT生成Token 返回前端

--- a/commons/commons-core/pom.xml
+++ b/commons/commons-core/pom.xml
@@ -20,6 +20,13 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+
+        <!--        jwt-->
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>com.qf</groupId>
             <artifactId>commons-data</artifactId>
