--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <ken-page.version>1.2.9</ken-page.version>
         <spring-cloud.version>Hoxton.SR9</spring-cloud.version>
         <spring-cloud-alibaba.version>2.2.5.RELEASE</spring-cloud-alibaba.version>
+        <jjwt.version>0.9.1</jjwt.version>
     </properties>
 
     <dependencyManagement>
@@ -91,6 +92,12 @@
                 <groupId>io.github.verygoodwlk</groupId>
                 <artifactId>ken-page-boot-starter</artifactId>
                 <version>${ken-page.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt</artifactId>
+                <version>${jjwt.version}</version>
             </dependency>
 
             <dependency>
