权限认证服务 读取配置文件中的相关url 使用过滤器拦截请求，匹配url判断是否需要权限，再进行响应操作后放行

--- a/ability/ability-gateway/pom.xml
+++ b/ability/ability-gateway/pom.xml
@@ -12,6 +12,10 @@
     <artifactId>ability-gateway</artifactId>
 
     <dependencies>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+        </dependency>
         <!--        gateway的依赖-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
