--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
         <spring-cloud.version>Hoxton.SR9</spring-cloud.version>
         <spring-cloud-alibaba.version>2.2.5.RELEASE</spring-cloud-alibaba.version>
         <jjwt.version>0.9.1</jjwt.version>
+        <fastjson.version>2.0.2</fastjson.version>
     </properties>
 
     <dependencyManagement>
@@ -99,6 +100,13 @@
                 <artifactId>jjwt</artifactId>
                 <version>${jjwt.version}</version>
             </dependency>
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>${fastjson.version}</version>
+            </dependency>
+
+
 
             <dependency>
                 <groupId>com.qf</groupId>
