权限认证服务 AuthGlobalFilter:用户登录后才可访问资源的权限逻辑完成 AuthGlobalFilter:用户登录后且需权限才可访问的逻辑完成，由BaseUser内的方法判断是否拥有权限,并让不同客户端子类根据情况重写该方法 读取请求端类型配置文件，将token转换成对应的BaseUser子类往后传 封装新的请求头往后传，把原来请求头内多余的数据删除，防止影响性能

--- a/ability/ability-gateway/src/main/resources/bootstrap.yml
+++ b/ability/ability-gateway/src/main/resources/bootstrap.yml
@@ -16,3 +16,9 @@ spring:
             refresh: true
   profiles:
     active: @runtime-profile@
+
+#根据请求来源的用户类型 配置信息
+request:
+  fromType:
+    # 0 - 后台管理系统  用户转换对象 - com\qf\data\user\dto\SysUserPowerDto.java
+    0: com.qf.data.user.dto.SysUserPowerDto
