--- a/ability/ability-gateway/pom.xml
+++ b/ability/ability-gateway/pom.xml
@@ -34,6 +34,12 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-zipkin</artifactId>
         </dependency>
+
+
+        <dependency>
+            <groupId>com.qf</groupId>
+            <artifactId>data-user</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
