--- a/ability/pom.xml
+++ b/ability/pom.xml
@@ -14,6 +14,7 @@
     <modules>
         <module>ability-gateway</module>
         <module>ability-atuh</module>
+        <module>ability-notify</module>
     </modules>
 
     <properties>
