elasticSearch SpringBoot操作ElasticSearch Java API实现文档 增删改查

--- a/ability/pom.xml
+++ b/ability/pom.xml
@@ -15,6 +15,7 @@
         <module>ability-gateway</module>
         <module>ability-atuh</module>
         <module>ability-notify</module>
+        <module>ability-search</module>
     </modules>
 
     <properties>
