redis - 集群限流 使用局部过滤器和lua脚本，通过redis实现限流

--- a/ability/ability-gateway/pom.xml
+++ b/ability/ability-gateway/pom.xml
@@ -34,7 +34,16 @@
 <!--            <groupId>org.springframework.cloud</groupId>-->
 <!--            <artifactId>spring-cloud-starter-zipkin</artifactId>-->
 <!--        </dependency>-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
 
+        <dependency>
+            <groupId>io.github.verygoodwlk</groupId>
+            <artifactId>ken-event-boot-starter</artifactId>
+            <version>1.0</version>
+        </dependency>
 
         <dependency>
             <groupId>com.qf</groupId>
