redis - redis实现Bloom过滤器、以及分布式锁

--- a/commons/pom.xml
+++ b/commons/pom.xml
@@ -16,6 +16,7 @@
         <module>commons-core</module>
         <module>commons-data</module>
         <module>commons-mybatis</module>
+        <module>commons-redis</module>
     </modules>
 
 
