--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
         <jjwt.version>0.9.1</jjwt.version>
         <fastjson.version>2.0.2</fastjson.version>
         <apm-toolkit-log4j-2.x.version>8.9.0</apm-toolkit-log4j-2.x.version>
+        <redisson.version>3.13.6</redisson.version>
     </properties>
 
     <dependencyManagement>
@@ -105,6 +106,13 @@
                 <groupId>org.apache.skywalking</groupId>
                 <artifactId>apm-toolkit-log4j-2.x</artifactId>
                 <version>${apm-toolkit-log4j-2.x.version}</version>
+            </dependency>
+
+            <!--        使用Redisson 实现分布式锁-->
+            <dependency>
+                <groupId>org.redisson</groupId>
+                <artifactId>redisson-spring-boot-starter</artifactId>
+                <version>${redisson.version}</version>
             </dependency>
 
 
