--- a/business/pom.xml
+++ b/business/pom.xml
@@ -74,6 +74,10 @@
             <groupId>com.qf</groupId>
             <artifactId>config</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.qf</groupId>
+            <artifactId>commons-redis</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
