--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
         <fastjson.version>2.0.2</fastjson.version>
         <apm-toolkit-log4j-2.x.version>8.9.0</apm-toolkit-log4j-2.x.version>
         <redisson.version>3.13.6</redisson.version>
+        <xxl-job.version>2.3.0</xxl-job.version>
     </properties>
 
     <dependencyManagement>
@@ -113,6 +114,11 @@
                 <groupId>org.redisson</groupId>
                 <artifactId>redisson-spring-boot-starter</artifactId>
                 <version>${redisson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.xuxueli</groupId>
+                <artifactId>xxl-job-core</artifactId>
+                <version>${xxl-job.version}</version>
             </dependency>
 
 
