--- a/ability/ability-notify/ability-notify-core/pom.xml
+++ b/ability/ability-notify/ability-notify-core/pom.xml
@@ -3,28 +3,27 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>ability</artifactId>
+        <artifactId>ability-notify</artifactId>
         <groupId>com.qf</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>ability-atuh</artifactId>
+    <artifactId>ability-notify-core</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>com.qf</groupId>
             <artifactId>commons-web</artifactId>
         </dependency>
-
-        <dependency>
-            <groupId>com.qf</groupId>
-            <artifactId>business-user-feign</artifactId>
-        </dependency>
-
         <dependency>
             <groupId>com.qf</groupId>
             <artifactId>data-notify</artifactId>
+        </dependency>
+        <!--        发邮件-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
         </dependency>
     </dependencies>
 
