--- a/ability/ability-notify/pom.xml
+++ b/ability/ability-notify/pom.xml
@@ -10,21 +10,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>ability-notify</artifactId>
+    <packaging>pom</packaging>
+    <modules>
+        <module>ability-notify-core</module>
+    </modules>
 
-    <dependencies>
-        <dependency>
-            <groupId>com.qf</groupId>
-            <artifactId>commons-web</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.qf</groupId>
-            <artifactId>data-notify</artifactId>
-        </dependency>
-        <!--        发邮件-->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-mail</artifactId>
-        </dependency>
-    </dependencies>
+
 
 </project>
