教师 - 教师登录注册 信息查询

--- a/ability/ability-gateway/src/main/resources/bootstrap.yml
+++ b/ability/ability-gateway/src/main/resources/bootstrap.yml
@@ -22,3 +22,4 @@ request:
   fromType:
     # 0 - 后台管理系统  用户转换对象 - com\qf\data\user\dto\SysUserPowerDto.java
     0: com.qf.data.user.dto.SysUserPowerDto
+    1: com.qf.data.user.entity.Teacher
