教师 - 教师信息管理：文件上传、下载(输入输出流使用)

--- a/ability/pom.xml
+++ b/ability/pom.xml
@@ -16,6 +16,7 @@
         <module>ability-atuh</module>
         <module>ability-notify</module>
         <module>ability-search</module>
+        <module>ability-file</module>
     </modules>
 
     <properties>
