课程 - 课程分类 树状图查询、课程分类插入 工具 - 新增整形转字符串工具类CommonsUtils（输出指定位数的字符串数字）

--- a/business/pom.xml
+++ b/business/pom.xml
@@ -15,6 +15,7 @@
 <!--        <module>business-student</module>-->
 <!--        <module>business-course</module>-->
         <module>business-user</module>
+        <module>business-course</module>
     </modules>
 
     <dependencies>
