课程 - JSONObject对象使用，处理json字符串。课程、规格、规格值关联业务。课程信息插入（复杂对象入参处理CourseInfoServiceImpl）一个课程对应多个规格类型，一个规格值。

--- a/config/src/main/resources-default/application-mybatis.yml
+++ b/config/src/main/resources-default/application-mybatis.yml
@@ -3,6 +3,9 @@ kenplugin:
   page:
     webconfig:
       enable: true
+  auto:
+    mapping:
+      enable: true
     #定义参数名字
 #    key:
 #      num: a
