search - 搜索服务课程实体类、规格实体类创建、索引创建方法和springboot启动调用、课程新增时 消息中间件发送消息通知搜索服务 搜索服务通过事件监听器courseInsertEventHandler 添加课程到es、dto对象转换为搜索实体类方法courseInfoSearchImpl

--- a/ability/ability-search/pom.xml
+++ b/ability/ability-search/pom.xml
@@ -13,10 +13,6 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.qf</groupId>
-            <artifactId>commons-web</artifactId>
-        </dependency>
-        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
         </dependency>
@@ -25,6 +21,15 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <!--只在测试环境生效 就不会被打包了-->
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.qf</groupId>
+            <artifactId>data-course</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.qf</groupId>
+            <artifactId>commons-web</artifactId>
         </dependency>
     </dependencies>
 
