user - 提供token验证接口，前端token过期跳转到登录页面 新增小程序保存用户信息接口

--- a/ability/ability-gateway/src/main/resources/bootstrap.yml
+++ b/ability/ability-gateway/src/main/resources/bootstrap.yml
@@ -25,4 +25,4 @@ request:
     # 0 - 后台管理系统  用户转换对象 - com\qf\data\user\dto\SysUserPowerDto.java
     0: com.qf.data.user.dto.SysUserPowerDto
     1: com.qf.data.user.entity.Teacher
-    2: com.qf.data.user.entiey.WxUser
+    2: com.qf.data.user.entity.WxUser
