红包 - 发红包相关表设计、前置业务实现

--- a/business/pom.xml
+++ b/business/pom.xml
@@ -16,6 +16,7 @@
 <!--        <module>business-course</module>-->
         <module>business-user</module>
         <module>business-course</module>
+        <module>business-redenvlopes</module>
     </modules>
 
     <dependencies>
