红包 - 分布式事务(红包服务调用user服务进行积分扣减发生异常两个服务都需要回滚)、乐观锁设计(通过sql语句条件限制，保证积分足够被扣减，避免了全局锁的使用)

--- a/business/business-redenvlopes/business-redenvlopes-core/pom.xml
+++ b/business/business-redenvlopes/business-redenvlopes-core/pom.xml
@@ -11,4 +11,10 @@
 
     <artifactId>business-redenvlopes-core</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.qf</groupId>
+            <artifactId>business-user-feign</artifactId>
+        </dependency>
+    </dependencies>
 </project>
