redis抢红包-lua、filter、并发 1、网关拦截器获取post和get请求参数(RedRobFilter.java)、拦截处理请求体(RequestGlobalFilter.java)、拦截器排序(实现ordered类即可) 2、redis版本发红包及前红包业务实现 - lua脚本实现(RedEnvelopesServiceImpl2.java,RedRobFilter.java) 3、网关最大连接数配置及工作线程配置 防止并发连接异常(GatewayApplication.java) 4、rabbitmq多线程消费配置

--- a/ability/ability-gateway/src/main/resources/bootstrap.yml
+++ b/ability/ability-gateway/src/main/resources/bootstrap.yml
@@ -16,6 +16,13 @@ spring:
             refresh: true
           - data-id: gateway-ignore-url.yml
             refresh: true
+    gateway:
+      httpclient:
+        pool:
+          #最大连接数
+          max-connections: 1000
+        #超时时间
+        connect-timeout: 10000
   profiles:
     active: @runtime-profile@
 
